# Squeez

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
scripts/: generate-assets.js
src/: App.css  App.tsx  types.ts  updater.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  engine.rs  lib.rs  presets.rs  shell.rs  types.rs
src/components/: HelpModal.tsx  Icons.tsx  ImageList.tsx  ImportModal.tsx  NumberInput.tsx  ProgressModal.tsx  SettingsPanel.tsx  ShellProcessWindow.tsx  StatusBar.tsx  SummaryModal.tsx  TitleBar.tsx  Toolbar.tsx  UpdateBanner.tsx
